logs/dag_id=run_fill_procedure/run_id=manual__2024-07-18T193841.660304+0000/task_id=fill_dm_account_turnover/attempt=1.log
[2024-07-18T19:39:00.707+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-07-18T19:39:00.731+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: run_fill_procedure.fill_dm_account_turnover manual__2024-07-18T19:38:41.660304+00:00 [queued]>
[2024-07-18T19:39:00.738+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: run_fill_procedure.fill_dm_account_turnover manual__2024-07-18T19:38:41.660304+00:00 [queued]>
[2024-07-18T19:39:00.739+0000] {taskinstance.py:2306} INFO - Starting attempt 1 of 2
[2024-07-18T19:39:00.752+0000] {taskinstance.py:2330} INFO - Executing <Task(PythonOperator): fill_dm_account_turnover> on 2024-07-18 19:38:41.660304+00:00
[2024-07-18T19:39:00.758+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'run_fill_procedure', 'fill_dm_account_turnover', 'manual__2024-07-18T19:38:41.660304+00:00', '--job-id', '501', '--raw', '--subdir', 'DAGS_FOLDER/create_and_fill_proc.py', '--cfg-path', '/tmp/tmp40ioa01n']
[2024-07-18T19:39:00.760+0000] {standard_task_runner.py:91} INFO - Job 501: Subtask fill_dm_account_turnover
[2024-07-18T19:39:00.769+0000] {logging_mixin.py:188} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61 DeprecationWarning: This process (pid=14105) is multi-threaded, use of fork() may lead to deadlocks in the child.
[2024-07-18T19:39:00.771+0000] {standard_task_runner.py:63} INFO - Started process 14106 to run task
[2024-07-18T19:39:00.800+0000] {task_command.py:426} INFO - Running <TaskInstance: run_fill_procedure.fill_dm_account_turnover manual__2024-07-18T19:38:41.660304+00:00 [running]> on host 7c7e02e57379
[2024-07-18T19:39:00.871+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='run_fill_procedure' AIRFLOW_CTX_TASK_ID='fill_dm_account_turnover' AIRFLOW_CTX_EXECUTION_DATE='2024-07-18T19:38:41.660304+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-07-18T19:38:41.660304+00:00'
[2024-07-18T19:39:00.872+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-07-18T19:39:00.891+0000] {base.py:84} INFO - Using connection ID 'postgres_default' for task execution.
[2024-07-18T19:39:00.900+0000] {base.py:84} INFO - Using connection ID 'postgres_default' for task execution.
[2024-07-18T19:39:00.911+0000] {base.py:84} INFO - Using connection ID 'postgres_default' for task execution.
[2024-07-18T19:39:00.920+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-07-18T19:39:00.925+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 401, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 235, in execute
    return_value = self.execute_callable()
                   ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 252, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/airflow/dags/create_and_fill_proc.py", line 167, in fill_dm_account_turnover
    end_time(log_id, "Finished_fill_dm_account_turnover")
  File "/opt/airflow/dags/create_and_fill_proc.py", line 115, in end_time
    cursor.execute(sql, (time, text, id))
psycopg2.errors.SyntaxError: syntax error at or near "("
LINE 2:         update logs.logs(end_time, status)
                                ^

[2024-07-18T19:39:00.975+0000] {taskinstance.py:1206} INFO - Marking task as UP_FOR_RETRY. dag_id=run_fill_procedure, task_id=fill_dm_account_turnover, run_id=manual__2024-07-18T19:38:41.660304+00:00, execution_date=20240718T193841, start_date=20240718T193900, end_date=20240718T193900
[2024-07-18T19:39:00.994+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 501 for task fill_dm_account_turnover (syntax error at or near "("
LINE 2:         update logs.logs(end_time, status)
                                ^
; 14106)
[2024-07-18T19:39:01.010+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-07-18T19:39:01.020+0000] {logging_mixin.py:188} WARNING - /home/***/.local/lib/python3.12/site-packages/***/models/baseoperator.py:1297 AirflowProviderDeprecationWarning: Call to deprecated class PostgresOperator. (Please use `***.providers.common.sql.operators.sql.SQLExecuteQueryOperator`.Also, you can provide `hook_params={'schema': <database>}`.)
[2024-07-18T19:39:01.032+0000] {taskinstance.py:3503} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-07-18T19:39:01.035+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
